1/24/2006 Bob Rossi <bob@brasko.net>

	* src/cgdbrc.c (command_start_tty): Removed.
	(COMMANDS): Remove the :start_tty array index.

1/24/2006 Bob Rossi <bob@brasko.net>

	* src/cgdbrc.c (command_do_quit_force): Removed.
	(COMMANDS): Remove the q! and quit! array index.
	(command_source_reload): Check for null dereference.

1/23/2006 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (version_info): Update Copyright.

1/20/2006 Bob Rossi <bob@brasko.net>

	* lib/Makefile.am (SUBDIRS): Remove wm.
	* lib/Makefile.in: Autogenerated.

1/20/2006 Bob Rossi <bob@brasko.net>
	
	* src/cgdb.c (usage): Print to stdout, instead of stderr.

1/19/2006 Bob Rossi <bob@brasko.net>

	* include/helptext.h: Autogenerated.

1/19/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* lib/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/filedlg.c (filedlg_recv_char): Fixed interface.

1/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* lib/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.

12/30/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (gdb_input): Update to new TGDB interface.

12/25/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (gdb_input): TGDB changed tgdb_recv_debugger_console_data 
	to gdb_process.

12/22/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (last_relative_file): Removed global.
	(process_commands): Add TGDB_FILENAME_PAIR case.
	Remove TGDB_ABSOLUTE_SOURCE_ACCEPTED case.
	(does_request_require_console_update): Modify cases.
	* src/interfac.c (internal_if_input): Removed last_relative_file
	extern. Update to TGDB's new interface.

12/20/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (start_gdb): Query TGDB for the initial source location.
	(does_request_require_console_update): Add case.

11/26/2005 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (process_commands): Process new TGDB command.
	(main): Remove call to old TGDB interface function.

11/23/2005 Bob Rossi <bob@brasko.net>
